# cnp

./: .gitignore  AppCMDB_Info  Comprehensive_MLflow_Utilities_And_Workflow_Guide.md  OpenDocumentation.bat  README.md  build_package.md  push_to_master.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
centralized_nlp_package/: __init__.py
centralized_nlp_package/common_utils/: __init__.py  date_utils.py  file_utils.py  string_utils.py
centralized_nlp_package/configs/: config.yaml  seed.yaml
centralized_nlp_package/configs/lib_config/: blob_conf.yaml  dask.yaml  paths.yaml  preprocessing.yaml  snowflake.yaml  word2vec.yaml
centralized_nlp_package/configs/queries/: queries.yaml  query_mapping.yaml
centralized_nlp_package/data_access/: __init__.py  dask_utils.py  snowflake_utils.py
centralized_nlp_package/data_processing/: __init__.py  dask_utils.py  dataframe_utils.py  spark_utils.py
centralized_nlp_package/embedding/: __init__.py  embedding_utils.py  word2vec_model.py
centralized_nlp_package/model_utils/: __init__.py  base_model.py  cross_validation.py  experiment_manager.py  main.py  model_evaluation.py  model_selector.py  model_transition.py  models.py
centralized_nlp_package/nli_utils/: __init__.py  arguments.py  data.py  metrics.py  nli_inference.py  nli_trainer.py  run_glue.py
centralized_nlp_package/pipelines/: Embedding_creation.py  Embedding_search.py
centralized_nlp_package/preprocessing/: __init__.py  ngram_utils.py  text_preprocessing.py
centralized_nlp_package/text_processing/: __init__.py  text_analysis.py  text_preprocessing.py  text_utils.py
centralized_nlp_package/utils/: __init__.py  config.py  exception.py  helper.py  helpers.py  logging_setup.py
centralized_nlp_package/visualization/: umap_viz.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: common_utils.doctree  data_access.doctree  data_processing.doctree  embedding.doctree  model_utils.doctree  nli_utils.doctree  preprocessing.doctree  text_processing.doctree  tutorials.doctree  usage_pipeline1.doctree  usage_pipeline2.doctree  utils.doctree  visualization.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/centralized_nlp_package/common_utils/: date_utils.html  file_utils.html  string_utils.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: data_access.rst.txt  data_processing.rst.txt  embedding.rst.txt  nli_utils.rst.txt  preprocessing.rst.txt  tutorials.rst.txt  usage_pipeline1.rst.txt  usage_pipeline2.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/source/: common_utils.html  data_access.html  data_processing.html  embedding.html  model_utils.html  nli_utils.html  preprocessing.html  text_processing.html  tutorials.html  usage_pipeline1.html  usage_pipeline2.html  utils.html  visualization.html
docs/source/: common_utils.rst  data_access.rst  model_utils.rst  nli_utils.rst  preprocessing.rst  text_processing.rst  utils.rst  visualization.rst
mocked/path/: word2vec_model
tests/: __init__.py  test_config.py  test_data_access.py  test_embedding.py  test_embedding_utils.py  test_helpers.py  test_ngram_utils.py  test_preprocessing.py  test_text_analysis.py  test_text_preprocessing.py  test_word2vec_model.py
workflows/: deploy_docs.yml
(+23 files in other folders)
