[tool.poetry]
name = "centralized-nlp-package"
version = "0.1.0"
description = ""
authors = ["santhosh <skumarr53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"
sphinx = "^7.1.1"
sphinx-autodoc-typehints = "^2.0"
furo = "^2024.8.6"
loguru = "^0.7.2"
hydra-core = "^1.3"
python-dotenv = "^1.0.1"
numpy = "^1.24.4"
cryptography = "^43.0.1"
gensim = "^4.3.3"
cython = "^3.0.11"
spacy = "^3.0.0"
thinc = "8.0.0"
pandas = "^2.0.0"
snowflake-connector-python = "^3.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


modify below prompt bash script to also show git branch and just show folder instead of full path


if [ "$color_prompt" = yes ]; then
    PS1='${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ '
else
    PS1='${debian_chroot:+($debian_chroot)}\u@\h:\w\$ '
fi
unset color_prompt force_color_prompt